[package]
name = "quick-sort"
version = "0.1.0"
authors = ["Roy Adams <roy.g.adams@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Window',
  'Performance',
  'PerformanceTiming'
]